--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Custom ignores
+
+# Ignore the secret areas
+./app/secrets/*
+!./app/secrets/README.md
+
+## Ignore this one in case someone wants to test out new modules but they do not want to commit.
+./requirements_test.txt 
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
