--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # Custom ignores
 
 # Ignore the secret areas
-./app/secrets/*
-!./app/secrets/README.md
+app/secrets/*
+!app/secrets/README.md
 
 ## Ignore this one in case someone wants to test out new modules but they do not want to commit.
-./requirements_test.txt 
+requirements_test.txt 
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
