Implemented the cration of the DB

--- a/app/config/config.toml
+++ b/app/config/config.toml
@@ -3,11 +3,12 @@
 
 [app_database]
 engine = "sqlite" # t.Literal["sqlite", "postgres"]
+database_name = "OpenViatica_App"
 
     [app_database.sqlite]
-    # str
-    path = "./config/Data/internal.db" # str
+    path = "./app/Data/" # str
 
     [app_database.postgres]
     host = "localhost" # str
     user = "admin" # str
+    # Passwoer should probably be stored somewhere else, but idk where
