--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Custom ignores
 
+build/*
+!build/README.md
+
 # Ignore the secret areas
 app/secrets/*
 !app/secrets/README.md
@@ -21,7 +24,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
-build/
+# build/
 develop-eggs/
 dist/
 downloads/
