--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ jedi==0.19.2
 matplotlib-inline==0.1.7
 mypy==1.16.0
 mypy_extensions==1.1.0
+Nuitka==2.7.10
+ordered-set==4.1.0
 parso==0.8.4
 pathspec==0.12.1
 pexpect==4.9.0
@@ -25,3 +27,4 @@ traitlets==5.14.3
 types-toml==0.10.8.20240310
 typing_extensions==4.14.0
 wcwidth==0.2.13
+zstandard==0.23.0
