--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 asttokens==3.0.0
 decorator==5.2.1
 dictdiffer==0.9.0
+dnspython==2.7.0
+email_validator==2.2.0
 executing==2.2.0
 greenlet==3.2.3
+idna==3.10
 ipython==9.3.0
 ipython_pygments_lexers==1.1.1
 jedi==0.19.2
