86a9fm3t4 user permissions setup (#1)
* Added things to the git ignore

* It actually works now

* Did the most basic setup, got mypy working and started the configuration side of it.

* refined config files, set documtation on standards, set types foundation and imported basic config

* implemented foundation to better code with mypy, work with config files and start the database setup

* Implemented the cration of the DB

* Added init to make mypy happy

* Implemented adding of new principals

* Completed starting implementation with sqlite as a simple backend

* Started work on the user workspaces

* Still working on it, I should probably join back to master

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
+# Custom ignores
+
+Workspaces/*
+!Workspaces/README.md
+
+build/*
+!build/README.md
+
+# Ignore the secret areas
+app/secrets/*
+!app/secrets/README.md
+
+# Ignore Data Area
+app/Data/*
+!app/Data/README.md
+
+## Ignore this one in case someone wants to test out new modules but they do not want to commit.
+requirements_test.txt 
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -8,7 +27,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
-build/
+# build/
 develop-eggs/
 dist/
 downloads/
