Completed workspace automatic .venv creation

--- a/app/config/config.toml
+++ b/app/config/config.toml
@@ -1,6 +1,8 @@
 # NOTE: The type hints can asolutely be out of date.
 #       If they are out of date, please notify it so it gets corrected.
 
+mode = "single_user"
+
 [app_database]
 engine = "sqlite" # t.Literal["sqlite", "postgres"]
 database_name = "OpenViatica_App"
@@ -12,9 +14,8 @@ database_name = "OpenViatica_App"
     host = "localhost" # str
     user = "admin" # str
 
-# This is the admin workspace, hosted on the backend server
-# Setting up other workspaces can be done from this one
-[admin_workspace]
+# This is the default settings for any workspace that is created
+[workspace_settings]
 # If hosted in another place, it could be mounted.
 # IDK what the options would be when we go enterprise and set this worksace up in another place, thats if we can or should...
 
@@ -22,4 +23,6 @@ database_name = "OpenViatica_App"
 # But for small use, it can make sense.
 
 # This could also be changed to some sort of podman that starts up and using vs code to connect to the folder stucture
-folder_path = "./Workspaces/Admin_Workspace/"
+base_folder_path = "Workspaces/"
+requirements_path = "app/Workspace_Files/workspace_base_pip_requirements.txt"
+admin_workspace_name = "Admin_Workspace"
