Successfully made the runtime type checking of configuration depend only on the typed dicts using pydantic

--- a/mypy.ini
+++ b/mypy.ini
@@ -3,5 +3,4 @@ python_version = 3.12
 strict = true
 
 # Add the SQLAlchemy mypy plugin for better typing support
-plugins =
-    sqlalchemy.ext.mypy.plugin
+plugins = sqlalchemy.ext.mypy.plugin, pydantic.mypy
