--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+annotated-types==0.7.0
 asttokens==3.0.0
+comm==0.2.2
+debugpy==1.8.14
 decorator==5.2.1
 dictdiffer==0.9.0
 dnspython==2.7.0
@@ -6,28 +9,43 @@ email_validator==2.2.0
 executing==2.2.0
 greenlet==3.2.3
 idna==3.10
+ipykernel==6.29.5
 ipython==9.3.0
 ipython_pygments_lexers==1.1.1
 jedi==0.19.2
+jupyter_client==8.6.3
+jupyter_core==5.8.1
 matplotlib-inline==0.1.7
 mypy==1.16.0
 mypy_extensions==1.1.0
+nest-asyncio==1.6.0
 Nuitka==2.7.10
 ordered-set==4.1.0
+packaging==25.0
 parso==0.8.4
 pathspec==0.12.1
 pexpect==4.9.0
+platformdirs==4.3.8
 prompt_toolkit==3.0.51
+psutil==7.0.0
 psycopg==3.2.9
 psycopg-binary==3.2.9
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pydantic==2.11.7
+pydantic_core==2.33.2
 Pygments==2.19.1
+python-dateutil==2.9.0.post0
+pyzmq==27.0.0
+six==1.17.0
 SQLAlchemy==2.0.41
 stack-data==0.6.3
 toml==0.10.2
+tornado==6.5.1
 traitlets==5.14.3
+typeguard==4.4.4
 types-toml==0.10.8.20240310
+typing-inspection==0.4.1
 typing_extensions==4.14.0
 wcwidth==0.2.13
 zstandard==0.23.0
