--- a/app/config/config.toml
+++ b/app/config/config.toml
@@ -17,8 +17,9 @@ database_name = "OpenViatica_App"
 # This is the default settings for any workspace that is created
 [workspace_settings]
 template_workspace_folder_path = "app/Workspace_Files/Template_Workspace"
-template_user_workspace_relpath = "External"
-template_venv_requirements_relpath = "Internal/Config/workspace_base_pip_requirements.txt"
+user_workspace_relpath = "Work"
+internal_system_relpath = "System"
+venv_requirements_relpath = "Config/workspace_base_pip_requirements.txt"
 
 # If hosted in another place, it could be mounted.
 # IDK what the options would be when we go enterprise and set this worksace up in another place, thats if we can or should...
