--- a/mypy.ini
+++ b/mypy.ini
@@ -4,3 +4,5 @@ strict = true
 
 # Add the SQLAlchemy mypy plugin for better typing support
 plugins = sqlalchemy.ext.mypy.plugin, pydantic.mypy
+
+exclude = ^(build|Workspaces)(/|\\)
