--- a/app/Workspace_Files/Template_Workspace/System/Config/setup_workspace/pyproject.toml
+++ b/app/Workspace_Files/Template_Workspace/System/Config/setup_workspace/pyproject.toml
@@ -4,6 +4,19 @@ package-mode = false  # 👈 disables packaging behavior
 
 [tool.poetry.dependencies]
 python = ">=3.12"
+pandas = "^2.3.0"
+numpy = "^2.3.1"
+polars = "^1.31.0"
+duckdb = "^1.3.1"
+ibis = "^3.3.0"
+matplotlib = "^3.10.3"
+plotly = "^6.2.0"
+dash = "^3.1.0"
+seaborn = "^0.13.2"
+openpyxl = "^3.1.5"
+notebook = "^7.4.3"
+sqlalchemy = "^2.0.41"
+ipython = "^9.3.0"
 
 
 [build-system]
