--- a/mypy.ini
+++ b/mypy.ini
@@ -6,3 +6,5 @@ strict = true
 plugins = sqlalchemy.ext.mypy.plugin, pydantic.mypy
 
 exclude = ^(build|Workspaces)(/|\\)
+
+mypy_path = app/Workspace_Files/Template_Workspace/System/Utilities/
