--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
     "email_validator>=2.2.0",
 
     # mypy specific dependencies
-    "types-toml >= 0.10.8.20240310"
+    "types-toml >= 0.10.8.20240310",
 ]
 [tool.poetry]
 package-mode = false
