86a9mvcqj create the workspace as a folder option (#2)
* I was working on the wrong branch

* Added better print statements

* Completed workspace automatic .venv creation

* Added pandas, polars, duckdb, iblis, notebook, matplotlib, plotly, seaborn modules as requirements for the workspace

* Leaving it like this for now, but I need to implement the automatic extraction using typed dicts and the workspace setup under the template setup

* Successfully made the runtime type checking of configuration depend only on the typed dicts using pydantic

* Added more to the workspace template and fixed the workspace

* Renamed the workspae template folders

* Changed tempalte folder names and added to readme

* Changed main app to poetry and pyproject, added setup script, added support to create typing files based on custom types

* Added dependencies

* Completed dependency installs for new workspaces

* Removing poetry lock from github

* Ignoring poetry lock file

* Added via_utils to the Workspace Utilities

* Updated readmes

* Completed code for a new workpsace setup

* Fixed path issue for windows

* Passed Windows Checks

* Passed linux checks

---------

Co-authored-by: ftorres-ucf <francisco.torres@ucf.edu>

--- a/app/config/config.toml
+++ b/app/config/config.toml
@@ -1,6 +1,8 @@
 # NOTE: The type hints can asolutely be out of date.
 #       If they are out of date, please notify it so it gets corrected.
 
+mode = ""
+
 [app_database]
 engine = "sqlite" # t.Literal["sqlite", "postgres"]
 database_name = "OpenViatica_App"
@@ -12,14 +14,22 @@ database_name = "OpenViatica_App"
     host = "localhost" # str
     user = "admin" # str
 
-# This is the admin workspace, hosted on the backend server
-# Setting up other workspaces can be done from this one
-[admin_workspace]
-# If hosted in another place, it could be mounted.
-# IDK what the options would be when we go enterprise and set this worksace up in another place, thats if we can or should...
+# This is the default settings for any workspace that is created
+[workspace_settings]
+template_workspace_folder_path = "app/Workspace_Files/Template_Workspace"
 
-# Folder path for now, it should probably not be where the app is hosted for security and enterprise purposes
-# But for small use, it can make sense.
+# Paths that would be relevant to the workspace itself
+user_workspace_foldername = "Work"
 
-# This could also be changed to some sort of podman that starts up and using vs code to connect to the folder stucture
-folder_path = "./Workspaces/Admin_Workspace/"
+
+# All sytem paths
+internal_system_foldername = "System"
+sytem_config_foldername = "Config"
+system_utilities_foldername = "Utilities"
+setup_script_relpath = "setup_workspace/setup.py"
+
+
+# Settings for where the workspaces should be hosted
+base_folder_path = "Workspaces/"
+admin_workspace_name = "Admin_Workspace"
+
