--- a/mypy.ini
+++ b/mypy.ini
@@ -3,5 +3,8 @@ python_version = 3.12
 strict = true
 
 # Add the SQLAlchemy mypy plugin for better typing support
-plugins =
-    sqlalchemy.ext.mypy.plugin
+plugins = sqlalchemy.ext.mypy.plugin, pydantic.mypy
+
+exclude = ^(build|Workspaces)(/|\\)
+
+mypy_path = app/Workspace_Files/Template_Workspace/System/Utilities/
